<resources>
    <string name="app_name">대학시간</string>

    <string name="january">1월</string>
    <string name="february">2월</string>
    <string name="march">3월</string>
    <string name="april">4월</string>
    <string name="may">5월</string>
    <string name="june">6월</string>
    <string name="july">7월</string>
    <string name="august">8월</string>
    <string name="september">9월</string>
    <string name="october">10월</string>
    <string name="november">11월</string>
    <string name="december">12월</string>

    <string name="monday_short">월요일</string>
    <string name="tuesday_short">화요일</string>
    <string name="wednesday_short">수요일</string>
    <string name="thursday_short">목요일</string>
    <string name="friday_short">금요일</string>
    <string name="saturday_short">토요일</string>
    <string name="sunday_short">일요일</string>

    <string name="monday_letter">월</string>
    <string name="tuesday_letter">화</string>
    <string name="wednesday_letter">수</string>
    <string name="thursday_letter">목</string>
    <string name="friday_letter">금</string>
    <string name="saturday_letter">토</string>
    <string name="sunday_letter">일</string>
    <string name="toast_exit_message">종료하시려면 뒤로가기를 한번 더 눌러주세요.</string>
    <string name="toast_semester_register_complete">저장이 완료되었습니다.&#128512;\n이제 과목을 등록해 보세요.</string>

    <string name="text_input_current_credit">현재: %d학점</string>
    <string name="text_input_subject_credit">%d학점</string>
    <string name="text_input_subject_total_credit">총 %d학점</string>
    <string name="text_input_subject_building_classroom">위치: %1$s %2$s</string>
    <string name="text_input_profile_graduation">졸업 (%1$d/%2$d)</string>
    <string name="text_input_profile_mandatory">전공 (%1$d/%2$d)</string>
    <string name="text_input_profile_elective">교양 (%1$d/%2$d)</string>
    <string name="text_input_toolbar_grade">%s 성적</string>

    <string name="profile_welcome_message">Your Profile &#128512;</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="text_alert_button_cancel">취소</string>
    <string name="text_alert_button_delete">삭제</string>
    <string name="text_alert_button_ok">확인</string>
    <string name="text_alert_title_semester_delete_title">학기 삭제</string>
    <string name="text_alert_title_semester_delete_message">해당 학기를 정말 삭제하시겠습니까?\n삭제 시 해당 학기와 관련된 모든 정보(과목, 과제 등)가 삭제됩니다.</string>
    <string name="text_mandatory">전공</string>
    <string name="text_elective">교양</string>
    <string name="text_semester">학기</string>
    <string name="text_subject_name">과목명</string>
    <string name="text_hint_subject_title">예) 경제학원론</string>
    <string name="text_classroom">강의실</string>
    <string name="text_hint_subject_classroom">예) 303호</string>
    <string name="text_building">건물</string>
    <string name="text_hint_subject_building">예) 연희관</string>
    <string name="text_credit">이수단위</string>
    <string name="text_color">색상</string>
    <string name="text_subject_type">전공여부</string>
    <string name="text_other">기타</string>
    <string name="text_subject_time">수업시간</string>
    <string name="text_alert_no_semester_warning_title">주의</string>
    <string name="text_alert_no_semester_warning_message">등록된 학기가 없습니다.\n과목을 등록하시기 전에 먼저 학기를 등록해주세요.</string>
    <string name="text_alert_no_semester_warning_message_by_task">등록된 학기가 없습니다.\n과제/시험을 등록하시기 전에 먼저 학기와 과목을 등록해주세요.</string>
    <string name="text_alert_no_subject_warning_message_by_task">등록된 과목이 없습니다.\n과제/시험을 등록하시기 전에 먼저 과목을 등록해주세요.</string>
    <string name="text_time_picker_title">시간을 입력하세요.</string>
    <string name="text_semester_title">이름</string>
    <string name="text_hint_add_semester_title">예) 1학년 1학기</string>
    <string name="text_memo">메모</string>
    <string name="text_hint_add_semester_description">예) 평균 A 목표!</string>
    <string name="text_start_date">시작일</string>
    <string name="text_end_date">종료일</string>
    <string name="text_btn_save">저장하기</string>
    <string name="text_add_semester">학기 등록</string>
    <string name="toolbar_add_semester_title">학기 등록</string>
    <string name="toast_semester_name_message">이름을 입력해주세요.</string>
    <string name="toast_semester_memo_message">메모를 입력해주세요.</string>
    <string name="toast_start_end_date_warning_message">시작 또는 종료 일자를 확인해주세요.</string>
    <string name="toast_save_complete_message">저장 완료!</string>
    <string name="toast_edit_complete_message">수정 완료!</string>
    <string name="text_graduation">졸업</string>

    <string name="text_passed_days_0">남은 시간까지 준비를 해볼까요?&#128512;</string>
    <string name="text_passed_days_25">즐거운 새 학기가 시작되었습니다.^^&#128512;</string>
    <string name="text_passed_days_50">즐거운 학기를 보내시고 계신가요?&#128512;</string>
    <string name="text_passed_days_75">벌써 반이 지났습니다.&#128512;</string>
    <string name="text_passed_days_99">얼마 남지 않았습니다. 화이팅하세요~!&#128512;</string>
    <string name="text_passed_days_100">이번 학기를 완료하였습니다. Good Job~&#128512;</string>
    <string name="text_settings">설정</string>
    <string name="btn_edit">수정</string>
    <string name="btn_add">등록</string>
    <string name="text_subject_empty_message">등록된 과목이 없습니다.</string>
    <string name="text_subtitle_enrolled_subject">수강과목</string>
    <string name="text_image_edit">수정</string>
    <string name="text_subtitle_graduation_requirements">졸업요건</string>
    <string name="text_subtitle_total_semesters">전체 학기</string>
    <string name="text_semester_empty_message">등록된 학기가 없습니다.</string>
    <string name="toast_start_date_duplicated">시작 날짜가 다른학기와 중복입니다.</string>
    <string name="toast_end_date_duplicated">종료 날짜가 다른학기와 중복입니다.</string>
    <string name="toast_start_end_date_cannot_be_the_save">시작날짜와 종료날짜가 일치합니다.</string>
    <string name="toolbar_title_add_subject">과목 등록</string>
    <string name="toast_start_end_time_warning_message">시작 또는 종료시간을 확인해주세요.</string>
    <string name="toast_error_message">에러가 발생했습니다. 다시 시도해주세요.</string>
    <string name="toast_delete_completed_message">삭제 완료!</string>
    <string name="toast_subject_name_message">과목명을 입력해주세요.</string>
    <string name="toast_subject_classroom_message">강의실을 입력해주세요.</string>
    <string name="toast_subject_building_message">건물(위치)을 입력해주세요.</string>
    <string name="toast_subject_day_message">시간을 입력해주세요.</string>
    <string name="btn_hint_semester">학기를 등록해주세요.</string>
    <string name="img_description_next_month">다음달</string>
    <string name="img_description_previous_month">전달</string>
    <string name="text_title">제목</string>
    <string name="text_hint_task_title">예) 레포트 제출/중간고사</string>
    <string name="text_hint_task_memo">예) 기한 엄수</string>
    <string name="text_date">날짜</string>
    <string name="text_time">시간</string>
    <string name="text_grade">성적</string>
    <string name="text_grade_warning">* 간단한 계산으로 산출된 학점입니다. 정확한 결과는 성적증명서를 통해 확인해주세요.</string>
    <string name="credit_4_3">4.3 만점</string>
    <string name="credit_4_5">4.5 만점</string>
    <string name="text_not_registered">미입력</string>
    <string name="toolbar_title_gradle_list">전체 성적</string>
    <string name="text_grade_list_empty_message">아직 등록된 성적이 없습니다.\n학기 상세정보 화면에서 성적을 등록해주세요.</string>
    <string name="text_grade_list_warning_message">*학기 상세정보 화면에서 성적을 등록해주세요.</string>
    <string name="text_select_complete">선택완료</string>
    <string name="text_semester_information">학기정보</string>
    <string name="text_start_time">시작시간</string>
    <string name="text_default_start_time">09:00</string>
    <string name="text_end_time">종료시간</string>
    <string name="text_default_end_time">10:00</string>
    <string name="text_subtitle_total_part_time_jobs">전체 알바</string>
    <string name="txt_type">유형</string>
    <string name="toolbar_title_add_task">과제 등록</string>
    <string name="toast_part_time_job_title_warning_message">알바명을 입력해주세요.</string>
    <string name="toast_credit_value_more_than_zero_warning_message">0보다 큰 값을 입력해주세요.</string>
    <string name="toast_credit_value_warning_message">값을 입력해주세요.</string>

    <string-array name="filter_credit_options">
        <item>4.3점</item>
        <item>4.5점</item>
    </string-array>
</resources>